--- a/src/markdown/mas/exploratie_gewasdiversiteit.Rmd
+++ b/src/markdown/mas/exploratie_gewasdiversiteit.Rmd
@@ -43,8 +43,10 @@ final_variables_df_raw <- read_csv(
 final_variables_df <- final_variables_df_raw %>%
   select(plotnaam, regio, jaar, x_plot, y_plot, sbp, openheid_klasse_300,
          gewas_div_shannon) %>%
-  filter(openheid_klasse_300 %in% c("OL", "HOL")) %>%
-  mutate(stratum = paste(sbp, "sbp", "-", openheid_klasse_300))
+  filter(openheid_klasse_300 %in% c("OL", "HOL"),
+         !(openheid_klasse_300 == "HOL" & regio == "De Moeren")) %>%
+  mutate(jaar.f = factor(jaar),
+         stratum = paste(sbp, "sbp", "-", openheid_klasse_300))
 final_variables_sf <- final_variables_df %>%
   st_as_sf(coords = c("x_plot", "y_plot")) %>%
   st_set_crs(31370)
@@ -97,4 +99,64 @@ Met $p_i(t)$ de proportie van teelt $i$ ($i = 1, ..., C(t)$) in telcirkel $t$.
 We herschaalden dit zodat de proporties opsommen tot 1 per telcirkel per jaar.
 
 Daarna namen we de exponent zodat dit getal te interpreteren is als het aantal teelten moest elke teelt eenzelfde oppervlakte hebben (= effectief aantal teelten: <https://en.wikipedia.org/wiki/Diversity_index#Effective_number_of_species_or_Hill_numbers>).
+
+## Data exploratie
+
+We bekijken het effectief aantal hoofdteelten per jaar, per regio.
+
+```{r}
+final_variables_df %>%
+  group_by(regio, jaar) %>%
+  summarise(
+    min = min(gewas_div_shannon),
+    Q10 = quantile(gewas_div_shannon, 0.10),
+    Q25 = quantile(gewas_div_shannon, 0.25),
+    mediaan = quantile(gewas_div_shannon, 0.5),
+    gemiddelde = mean(gewas_div_shannon),
+    Q75 = quantile(gewas_div_shannon, 0.75),
+    Q90 = quantile(gewas_div_shannon, 0.9),
+    max = max(gewas_div_shannon)
+  ) %>%
+  ungroup() %>%
+  arrange(regio, jaar) %>%
+  kable(digits = 2)
+```
+
+Visueel zien we een knik bij 2020 voor beide streken.
+
+```{r}
+final_variables_df %>%
+  ggplot(aes(x = jaar.f, y = gewas_div_shannon)) +
+    geom_boxplot() +
+    facet_grid(~regio)
+```
+
+```{r}
+final_variables_df %>%
+  ggplot(aes(x = jaar, y = gewas_div_shannon)) +
+    geom_smooth(aes(group = plotnaam), method = "lm", se = FALSE,
+                linewidth = 0.05, formula = "y ~ x") +
+    geom_point(alpha = 0.2) +
+    geom_smooth(method = "loess", se = TRUE, linewidth = 1, formula = "y ~ x",
+                colour = "firebrick") +
+    facet_grid(~regio)
+```
+
+Als we opsplitsen per stratum:
+
+```{r}
+final_variables_df %>%
+  ggplot(aes(x = jaar.f, y = gewas_div_shannon, colour = sbp)) +
+    geom_boxplot() +
+    facet_grid(openheid_klasse_300~regio)
+```
+
+```{r}
+final_variables_df %>%
+  ggplot(aes(x = jaar, y = gewas_div_shannon, colour = sbp, group = sbp)) +
+    geom_point(position = position_dodge(width = .5), alpha = 0.2) +
+    geom_smooth(method = "loess") +
+    facet_grid(openheid_klasse_300~regio)
+```
+
 
