--- a/src/markdown/general/uitschrijven_steekproefkaders_mbag.Rmd
+++ b/src/markdown/general/uitschrijven_steekproefkaders_mbag.Rmd
@@ -418,7 +418,7 @@ Yes.
 steekproef_leemstreek_avimap <- steekproef_wl %>%
   filter(pointid %in% plotnaam_wl)
 
-steekproef_leemstreek_avimap %>%
+head(steekproef_leemstreek_avimap) %>%
   kable(digits = 2)
 ```
 
@@ -525,7 +525,7 @@ old_points <- export_mas_2023 %>%
 steekproef_zandleemstreek_avimap <- steekproef_zn %>%
   filter(pointid %in% unique(steekproef_zandleemstreek_avimap_raw$pointid))
 
-steekproef_zandleemstreek_avimap %>%
+head(steekproef_zandleemstreek_avimap) %>%
   kable(digits = 2)
 ```
 
